@@ -1,5 +1,6 @@
 from wagtail.core.permission_policies.collections import CollectionOwnershipPermissionPolicy
-from wagtail.documents.models import Document, get_document_model
+from wagtail.documents import get_document_model
+from wagtail.documents.models import Document
 
 permission_policy = CollectionOwnershipPermissionPolicy(
     get_document_model(),
