@@ -1,10 +1,9 @@
 from draftjs_exporter.dom import DOM
-
 from wagtail.admin.rich_text.converters.html_to_contentstate import LinkElementHandler
-from wagtail.documents.models import get_document_model
-
+from wagtail.documents import get_document_model
 
 # draft.js / contentstate conversion
+
 
 def document_link_entity(props):
     """
