@@ -1,7 +1,7 @@
 from django.db import transaction
 from django.db.models.signals import post_delete
 
-from wagtail.documents.models import get_document_model
+from wagtail.documents import get_document_model
 
 
 def post_delete_file_cleanup(instance, **kwargs):
