@@ -9,10 +9,12 @@ Changelog
  * Combine flake8 configurations (Sergey Fedoseev)
  * Improved diffing behavior for text fields (Aliosha Padovani)
  * Improve contrast of disabled inputs (Nick Smith)
+ * Added ``get_document_model_string`` function (WinterComes)
  * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
  * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
  * Fix: Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
  * Fix: Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
+ * Fix: Moved ``get_document_model`` location so it can be imported when Models are not yet loaded (WinterComes)
 
 2.7 LTS (06.11.2019)
 ~~~~~~~~~~~~~~~~~~~~
